--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: jzlingmo
+name: Vijay Zhou's site
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: A Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/jzlingmo/jzlingmo.github.io/master/images/logo.png
