--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ footer-links:
 
 duoshuo: jzlingmo
 
-baidu_analytics:
+baidu_analytics: 23249e552a3c522e0e8d466ed2ff4cd4
 google_analytics:
 
 # Used for Sitemap.xml and RSS feed
