change some styles

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ imghost: http://7xib2u.com1.z0.glb.clouddn.com
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  email: 120237546@qq.com
+  email: jzlingmo@gmail.com
   linkedin:
   github: jzlingmo
   rss: true
